<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZIM</string>
    <string name="save">Speichern</string>
    <string name="TimePickerHeader">Einrichtung</string>
    <string name="UserID">Probandencode</string>
    <string name="preferenceUserTitle">Benutzerdaten</string>
    <string name="preferenceUserIDDescription">Kein Probandencode festgelegt</string>
    <string name="preferenceWakeTimes">Alarmzeiten</string>
    <string name="preferenceWakeTimesDescription">Wählen Sie aus, wann die App an Zählung der sozialen Kontakte erinnert.</string>
    <string name="title_main_activity">OvGU - ZIM</string>
    <string name="title_activity_preference">Einstellungen</string>
    <string name="WakeTime9to12">Alarmzeit 9 Uhr - 12 Uhr</string>
    <string name="WakeTime13to15">Alarmzeit 13 Uhr - 15 Uhr</string>
    <string name="WakeTime16to19">Alarmzeit 16 Uhr - 19 Uhr</string>
    <string name="WakeTime20to23">Alarmzeit 20 Uhr - 23 Uhr</string>
    <string name="PreferenceChooseWakeTime">Wählen Sie eine Uhrzeit aus der Liste.</string>
    <string name="PreferenceVibration">Vibration</string>
    <string name="PreferenceVibrationDescription">Das Smartphone vibriert zusätzlich zum Alarmton.</string>
    <string name="PreferenceNoVibrationDescription">Das Smartphone vibriert nicht zusätzlich zum Alarmton.</string>
    <string name="PreferenceRingtone">Alarmton</string>
    <string name="PreferenceRingtoneDescription">Legen Sie fest, ob zum Alarm ein Benachrichtigungston abgespielt werden soll.</string>
    <string name="PreferenceNoWakeTime">Keine Alarmzeit festgelegt</string>
    <string name="PreferenceUserIDSet">Der eingegebene Probandencode lautet: </string>
    <string name="PreferenceWakeTimeSet">Die App alarmiert um </string>
    <string name="UserIDManual">Ihr Probandencode hat folgendes Buchstabenmuster:\n1. Dritter Buchstabe des Vornamens der Mutter\n2. Dritter Buchstabe des Vornamens des Vaters\n3. Dritter Buchstabe des Geburtsortes\n4. Dritter Buchstabe der aktuellen Straße (Hauptwohnsitz)\n5. Dritter Buchstabe des Geburtsmonats</string>
    <string name="EmptyString"></string>
    <string name="PreferencesNotSet">Nicht alle Einstellungen wurden gesetzt!</string>
    <string name="title_activity_alarm">ZIM - Auswertung</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="NextAlarmP1">Der nächste Alarm ist auf</string>
    <string name="NextAlarmP2">:00 Uhr gesetzt.</string>
    <string name="NextAlarmNotSet">Es wurden noch keine Alarmzeiten gesetzt.</string>
    <string name="NextAlarmHeader">Nächster Alarm</string>
    <string name="SettingsHeader">Einstellungen</string>
    <string name="SettingsDescription">Stellen Sie Ihren Probandencode, Alarmzeiten und Alarmtyp ein. Der Probandencode kann danach nicht mehr verändert werden!</string>
    <string name="SettingsButtonText">Einstellungen ändern</string>
    <string name="CSVHeader">CSV-Export</string>
    <string name="CSVDescription">Sichern Sie die gespeicherten Datensätze im CSV-Format auf dem öffentlichen Telefonspeicher.</string>
    <string name="CSVButtonText">CSV-Datei speichern</string>
    <string name="WipeHeader">App zurücksetzen</string>
    <string name="WipeDescription">Setzten Sie mit Hilfe des mitgeteilten Passworts die Einstellungen und Datensätze des Probanden zurück.</string>
    <string name="WipeButtonText">App zurücksetzen</string>
    <string name="ContactCountHeader">Anzahl der Kontakte</string>
    <string name="ContactCountDescription">Geben Sie an, wie viele soziale Kontakte Sie seit dem letzten Alarmzeitpunkt hatten.</string>
    <string name="ContactCount1">+1 Kontakt</string>
    <string name="ContactCount5">+5 Kontakte</string>
    <string name="ContactTimeHeader">Kontaktzeit</string>
    <string name="ContactTimeDescription">Geben Sie an, wie viele Minuten Sie mit den sozialen Kontakten verbracht haben.</string>
    <string name="ContactTime5">+5 Minuten</string>
    <string name="ContactTime15">+15 Minuten</string>
    <string name="ContactTimeWrongTime">Die von Ihnen eingegebene Minutenanzahl ist höher als die vergangenen Minuten seit dem letzten Alarm!</string>
    <string name="ContactTimeWrongTimeZeroContacts">Sie können nicht Zeit mit Kontakten verbringen, die Sie gar nicht hatten (0 Kontakte eingegeben)!</string>
	<string name="zero">0</string>
	<string name="RelevantIntervalHeader">Betrachtungsintervall</string>
	<string name="RelevantTimeInterval1">Für die Zählung sind nur Kontakte seit der letzten Befragung um</string>
	<string name="RelevantTimeInterval2">Uhr relevant.</string>
	<string name="RelevantTimeInterval3">Für die Zählung sind alle Kontakte, die Sie heute hatten, relevant.</string>
</resources>