<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
	android:scrollbars="none"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp" >

        <RelativeLayout
            android:id="@+id/LayoutNextAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="12dp"
            android:layout_marginTop="24dp"
            android:paddingBottom="12dp"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextViewNextAlarm"
                android:layout_marginTop="10dp"
                android:text="@string/NextAlarmHeader"
                android:textColor="#707070"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/TextViewNextAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/NextAlarmNotSet"
                android:textColor="#707070" />

        </RelativeLayout>

        <View
            android:id="@+id/View4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/LayoutNextAlarm"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="-12dp"
            android:background="#D4D4D4" />

        <RelativeLayout
            android:id="@+id/LayoutChangePreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/LayoutNextAlarm"
            android:layout_margin="12dp"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView01"
                android:layout_marginTop="10dp"
                android:text="@string/SettingsHeader"
                android:textColor="#707070"
                android:textSize="28sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView02"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/SettingsDescription"
                android:textColor="#707070" />

            <View
                android:id="@+id/View01"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/TextView01"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="0dp"
                android:background="#E6E6E6" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/View01"
                android:layout_centerHorizontal="true"
                android:background="@color/linkcolor"
                android:clickable="true"
                android:gravity="center"
                android:onClick="openPreferences"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/SettingsButtonText"
                android:textColor="#34B5E5" />

        </RelativeLayout>
        <View
            android:id="@+id/View7"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/LayoutChangePreferences"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="-12dp"
            android:background="#D4D4D4" />

        <RelativeLayout
            android:id="@+id/LayoutCSVExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LayoutChangePreferences"
            android:layout_margin="12dp"
            android:layout_marginTop="12dp"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView05"
                android:layout_marginTop="10dp"
                android:text="@string/CSVHeader"
                android:textColor="#707070"
                android:textSize="28sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView04"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/CSVDescription"
                android:textColor="#707070" />

            <View
                android:id="@+id/View02"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/TextView05"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="0dp"
                android:background="#E6E6E6" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/View02"
                android:layout_centerHorizontal="true"
                android:background="@color/linkcolor"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/CSVButtonText"
                android:textColor="#34B5E5" />

        </RelativeLayout>
        <View
            android:id="@+id/View6"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/LayoutCSVExport"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="-12dp"
            android:background="#D4D4D4" />

        <RelativeLayout
            android:id="@+id/LayoutWipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LayoutCSVExport"
            android:layout_margin="12dp"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView09"
                android:layout_marginTop="10dp"
                android:text="@string/WipeHeader"
                android:textColor="#707070"
                android:textSize="28sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView08"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/WipeDescription"
                android:textColor="#707070" />

            <View
                android:id="@+id/View03"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/TextView09"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="0dp"
                android:background="#E6E6E6" />

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/View03"
                android:layout_centerHorizontal="true"
                android:background="@color/linkcolor"
                android:clickable="true"
                android:gravity="center"
                android:onClick="wipeData"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/WipeButtonText"
                android:textColor="#34B5E5" />

        </RelativeLayout>
        <View
            android:id="@+id/View5"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/LayoutWipe"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="-12dp"
            android:background="#D4D4D4" />

    </RelativeLayout>

</ScrollView >