<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:scrollbars="none"
    tools:context=".AlarmActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp" >

        <RelativeLayout
            android:id="@+id/LayoutAmountContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="12dp"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView01"
                android:layout_marginTop="10dp"
                android:text="@string/ContactCountHeader"
                android:textColor="#707070"
                android:textSize="28sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView02"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/ContactCountDescription"
                android:textColor="#707070" />

            <EditText
                android:id="@+id/EditTextContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView01"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/zero" />

            <View
                android:id="@+id/View01"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/EditTextContacts"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="#E6E6E6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/View01"
                android:orientation="horizontal" >
				
                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/linkcolor"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="increaseContacts1"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/ContactCount1"
                    android:textColor="#34B5E5" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/linkcolor"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="increaseContacts5"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/ContactCount1"
                    android:textColor="#34B5E5" />

            </LinearLayout>

        </RelativeLayout>
        <View
            android:id="@+id/View5"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/LayoutAmountContacts"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="-12dp"
            android:background="#D4D4D4" />

        <RelativeLayout
            android:id="@+id/LayoutAmountTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LayoutAmountContacts"
            android:layout_centerHorizontal="true"
            android:layout_margin="12dp"
            android:layout_marginTop="218dp"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView06"
                android:layout_marginTop="10dp"
                android:text="@string/ContactTimeHeader"
                android:textColor="#707070"
                android:textSize="28sp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView05"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/ContactTimeDescription"
                android:textColor="#707070" />

            <EditText
                android:id="@+id/EditTextContactTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView06"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/zero" />

            <View
                android:id="@+id/View02"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/EditTextContactTime"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:background="#E6E6E6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/View02"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView08"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/linkcolor"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="increaseContactsTime5"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/ContactTime5"
                    android:textColor="#34B5E5" />

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/linkcolor"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="increaseContactsTime15"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/ContactTime15"
                    android:textColor="#34B5E5" />

            </LinearLayout>
        </RelativeLayout>
		<View
            android:id="@+id/View6"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/LayoutAmountTime"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="-12dp"
            android:background="#D4D4D4" />
        

    </RelativeLayout>

</ScrollView>
